--- a/style.css
+++ b/style.css
@@ -10,3 +10,12 @@ body{
     box-shadow: 4px 6px 6px #888;
     margin-top: 5em;
 }    
+.todo-editor{
+    padding: 5px 20px;
+    display: flex;
+}
+.todo-editor input{
+    flex-grow: 1;
+    flex-size: 1.2em;
+    padding: 2px 5px;
+}
